@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-10T01:20:39Z",
+  "timestamp" : "2022-08-10T08:18:49Z",
   "count_outdated" : 443,
   "uniques_outdated" : 255,
-  "count" : 479,
-  "uniques" : 274,
+  "count" : 488,
+  "uniques" : 282,
   "clones" : [
     {
       "timestamp": "2022-07-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-08-10T00:00:00Z",
+      "count": 10,
+      "count_minmax": [ 10, 10 ],
+      "uniques": 8,
+      "uniques_minmax": [ 8, 8 ]
     }
   ]
 }
