@@ -1,10 +1,10 @@
 {
-  "count": 36,
-  "uniques": 6,
+  "count": 45,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-07-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-10T00:00:00Z",
+      "count": 10,
+      "uniques": 8
     }
   ]
 }
