@@ -1,3 +1,10 @@
+2022-08-10T08:18:49Z:
+* notice: last 14d: unq all: 13 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 255 443 / 274 479
+* notice: next accum: outdated-unq outdated-all / unq all: 255 443 / 282 488
+* notice: prev exec diff / last date diff / accum: unq all: +8 +10 -0 -1 / +8 +10 -0 -0 / 8 10
+* notice: removed / changed dates: [] / [2022-07-27 2022-08-10]
+
 2022-08-10T01:20:39Z:
 * notice: last 14d: unq all: 6 36
 * notice: prev accum: outdated-unq outdated-all / unq all: 254 441 / 273 477
